--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <nav> 
         <ul> 
-            <li class="main-name"> color flipper </li>
+            <li class="main-name"> color flipper</li>
         </ul>
     </nav>
 
 
     <div> 
-        <h4 class="title">
-            Background Color:<span class="color-name"></span></h4>
-    <form> 
+        <h4 class="title">Background Color<span class="color-name"></span></h4>
+    </div>
+        <form> 
         <input type="button" value="click me">
     </form>
 
-</div>
+
     
 </body>
 </html>
